--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
         image: lab-docker-node-express
         container_name: lab-docker-node-express
         restart: always
+        command: /app/node_modules/.bin/nodemon --exec npm start --ext jade
         networks:
             - lab
         ports:
@@ -12,7 +13,6 @@ services:
         volumes: 
             - .:/app
             - node_modules:/app/node_modules
-
 networks:
     lab:
         name: lab
