--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.8"
+
 services:
     app:
         build: .
@@ -6,6 +7,8 @@ services:
         container_name: lab-docker-node-express
         restart: always
         command: /app/node_modules/.bin/nodemon --exec npm start
+        environment: 
+            NODE_ENV: development
         networks:
             - lab
         ports:
@@ -13,6 +16,7 @@ services:
         volumes: 
             - .:/app
             - node_modules:/app/node_modules
+
 networks:
     lab:
         name: lab
